# vits-train

./: .gitignore  .projectile  README.md  checkpoint_to_generator.py  mypy.ini  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
scripts/: check-code.sh  create-venv.sh  format-code.sh
vits_train/: __init__.py  __main__.py  attentions.py  checkpoint.py  commons.py  config.py  data_utils.py  dataset.py  export_generator.py  export_onnx.py  export_torchscript.py  infer.py  infer_onnx.py  losses.py  mel_processing.py  model.py  models.py  modules.py  train.py  train2.py  transforms.py  utils.py
vits_train/monotonic_align/: core.c
