[metadata]
name = vits-train
version = file: vits_train/VERSION
author = Michael Hansen
author_email = mike@rhasspy.org
url = https://github.com/synesthesiam/vits-train
description = VITS text to speech model trainer
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.8

[options]
setup_requires =
  cython
  numpy>=1.19.0
install_requires =
  cython
  dataclasses-json~=0.4.2
  torch>=1.6.0
  librosa~=1.8.0
  numba==0.53
  phonemes2ids~=1.1.0

[options.extras_require]
dev =
    black==19.10b0
    coverage==5.0.4
    flake8==3.7.9
    mypy==0.910
    pylint==2.10.2

[options.package_data]
vits_train = py.typed, VERSION

# -----------------------------------------------------------------------------

[tox:tox]
envlist = py37,py38,py39

[testenv]
deps =
    pytest==5.4.1
    pytest-cov==2.8.1
commands =
    pytest

# -----------------------------------------------------------------------------

[flake8]
# To work with Black
max-line-length = 88
# E501: line too long
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202 No blank lines allowed after function docstring
# W504 line break after binary operator
ignore =
    E501,
    W503,
    E203,
    D202,
    W504

# -----------------------------------------------------------------------------

[isort]
multi_line_output = 3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
indent = "    "
